--- a/wiki/knife.wikitext
+++ b/wiki/knife.wikitext
@@ -26,6 +26,7 @@
 *[[Interlingua]]: [[cultello]]
 *Italian: [[coltello]] ''m''
 *Japanese: [[小刀]], [[包丁]], [[短剣]], [[ナイフ]] (naifu), [[メス]]
+*Lithuanian: [[peilis]] ''m''
 *Polish: [[nóż]] ''m''
 *Portuguese: [[faca]] ''f''
 *Romanian: [[cuţit]] ''n''
