--- a/wiki/epee.wikitext
+++ b/wiki/epee.wikitext
@@ -11,6 +11,7 @@
 *[[Dutch]]: [[degen]] (1)
 *Chinese: [[重剑]] (zhongjian)
 *[[Finnish]]: [[kalpa]] (1)
+*Lithuanian: [[špaga]] ''f''
 
 ==Related words==
 
