--- a/wiki/FOIL.wikitext
+++ b/wiki/FOIL.wikitext
@@ -26,6 +26,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 *[[Finnish]]: [[folio]]
 *German: [[Folie]] ''n''
+*Lithuanian: [[folija]] ''f''
 |}
 
 '''thin aluminium/aluminum or tin used for wrapping food'''
@@ -43,6 +44,7 @@
 {|
 <!--languages from J to Z go here-->
 |}
+*Lithuanian: [[folija]] ''f''
 |}
 
 '''type of sword used in fencing'''
@@ -61,6 +63,7 @@
 {|
 <!--languages from J to Z go here-->
 |}
+*Lithuanian: [[rapyra]] ''f''
 |}
 
 '''thin layer of metal put between a jewel and its setting to make it seem more brilliant'''
@@ -75,6 +78,7 @@
 {|
 <!--languages from J to Z go here-->
 |}
+*Lithuanian: [[folija]] ''f''
 |}
 
 '''a character who helps emphasise the traits of the main character'''
