--- a/wiki/sabre.wikitext
+++ b/wiki/sabre.wikitext
@@ -13,6 +13,7 @@
 *[[Dutch]]: [[sabel]] (1), [[sabel]] (2)
 *[[Finnish]]: [[sapeli]] (1), [[säilä]] (2)
 *Japanese: [[サーブル]] (saburu)(1), [[武力]] (ぶりょく, buryoku)
+*Lithuanian: [[kardas]] ''m'' (curved), [[palašas]] ''m'' (straight)
 
 ===Transitive verb===
 '''sabre''' ([[sabred]], sabred)
