--- a/wiki/elf.wikitext
+++ b/wiki/elf.wikitext
@@ -17,6 +17,7 @@ A mythical creature usually seen as humanoid in shape or form.  Several types of
 *German: [[Elb]] ''m'', [[Elbin]] ''f'' (Tolkien, else:) Elf ''m'', [[Elfe]] ''f''
 *Hebrew: [[שד גמד|שֵׁד גַמָּד]]
 *Italian: elfo
+*Lithuanian: [[elfas]] ''m''; [[elfė]] ''f''
 *Polish: elf
 *Slovak: [[škriatok]] ''m''
 
