--- a/wiki/vampire.wikitext
+++ b/wiki/vampire.wikitext
@@ -10,6 +10,7 @@
 *{{fi}}: [[vampyyri]], [[verenimijä]]
 *German: [[vampir]]
 *Italian: [[vampiro]]
+*Lithuanian: [[vampyras]] ''m''; [[vampyrė]] ''f''
 *{{pl}}: [[wampir]] ''m''
 *{{sv}}: [[vampyr]] ''c'' (1)
 
