--- a/wiki/werewolf.wikitext
+++ b/wiki/werewolf.wikitext
@@ -24,8 +24,10 @@ The myth possibly originates from the disease [[w:Lupus erythematosus|lupus eryt
 *French: [[loup-garou]] ''m''
 *German: [[Werwolf]] ''m''
 *Italian: [[licantropo]] ''m''
+*Lithuanian: [[vilktakas]] ''m'', [[vilkolakis]] ''m''
 *{{sk}}: [[vlkolak]] ''m''
 *Spanish: [[hombre lobo]] ''m''
+
 ====See also====
 *[[were-]]
 *[[werebear]]
