--- a/wiki/tiny.wikitext
+++ b/wiki/tiny.wikitext
@@ -1,1 +1,11 @@
-Adjective -- [[very]] [[small]]
+==English==
+
+===Adjective===
+tiny  -- [[very]] [[small]]
+
+====translation====
+*[[Hebrew]]: [[:he:קטנטן|קטנטן]] /ktantan/
+*[[Russian]]: [[:ru:крошечный|крошечный]] /kroshechni'y/
+
+==[[multilingual associations]]==
+*[[Hebrew]]: '''tiny''' [[:he:תינוק|תינוק]] /tinok/ ([[baby]])
