--- a/wiki/were-.wikitext
+++ b/wiki/were-.wikitext
@@ -11,6 +11,8 @@ From the Proto-Indo-European root *'''[[wī-ro-]]''', ''man''; cognate with Lati
 
 # man; prefix most commonly used with animal names to indicate a person who changes shape into that animal.
 
+===Translations===
+*Lithuanian: [[-takas]] ''m''; [[-takė]] ''f''
 
 ===Derived Terms===
 *[[werebear]]
