--- a/wiki/glaive.wikitext
+++ b/wiki/glaive.wikitext
@@ -7,3 +7,6 @@
 #(''Weapon'') A light [[lance]] with a [[long]] [[sharp]]-[[point]]ed [[head]]. 
 #(''Weapon'') A [[sword]]; used [[poetically]] and [[loosely]].
 #:''The glaive which he did wield.'' Spenser.
+
+===Translations===
+*Lithuanian: [[gleivas]] ''m''
