--- a/wiki/halbert.wikitext
+++ b/wiki/halbert.wikitext
@@ -6,3 +6,6 @@
 # (''Weapon'') [[Category:Weapon]] An [[ancient]] long-handled [[weapon]], of which the [[head]] had a [[point]] and several long, sharp [[edge]]s, [[curve]]d or [[straight]], and sometimes additional points. The heads were sometimes of very [[elaborate]] form.
 #:'''Quotations'''
 #:*'''1786''': [[Halbert]]s are of a [[variety]] of [[form]]s, they are commonly [[mount]]ed on [[stave]]s of seven [[feet]] [[long]], with a pointed [[ferril]] at the end, for the purpose of [[stick]]ing them in the [[ground]]. &mdash; Francis Grose, ''A Treatise on Ancient Armour and Weapons'', page 52.
+
+===Translations===
+*Lithuanian: [[alebarda]] ''f''
