/* Noun */ <battle-ax#56448>

--- a/wiki/battle-ax.wikitext
+++ b/wiki/battle-ax.wikitext
@@ -8,3 +8,6 @@
 #:*'''1786''': Another [[battle-ax]], in the same [[collection]]. &mdash; Francis Grose, ''A Treatise on Ancient Armour and Weapons'', page x.
 # (''colloquial'') An unpleasant and unattractive older woman.
 #: ''Naturally, she deeply resented having been called a battle-ax.''
+
+===Translations===
+*Lithuanian: [[kovos kirvis]] ''m''
