--- a/wiki/bayonet.wikitext
+++ b/wiki/bayonet.wikitext
@@ -5,6 +5,10 @@
 #:'''Quotations'''
 #:*'''1786''': Fig. 3. Its [[bayonet]], to be [[fix]]ed by [[stick]]ing the handle into the [[muzzle]] of the [[musquet]]. &mdash; Francis Grose, ''A Treatise on Ancient Armour and Weapons'', page xvi.
 #(''Machinery'') A [[pin]] which [[play]]s in and out of [[hole]]s made to [[receive]] it, and which thus [[serve]]s to [[engage]] or [[disengage]] parts of the [[machinery]].
+
+===Translations===
+*Lithuanian: [[durtuvas]] ''m''
+
 ===Transitive verb===
 '''to bayonet''' (bayoneted, bayoneting)
 #To [[stab]] with a bayonet.
