--- a/wiki/watermelon.wikitext
+++ b/wiki/watermelon.wikitext
@@ -22,6 +22,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from J to Z go here-->
+*Lithuanian: [[arbūzas]] ''m''
 *Spanish: [[sandía]] ''f''
 *Swedish: [[vattenmelon]] ''c''
 |}
@@ -43,6 +44,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from J to Z go here-->
+*Lithuanian: [[arbūzas]] ''m''
 *Russian: [[арбуз]] ''m''
 *Spanish: [[sandía]] ''f''
 *Swedish: [[vattenmelon]] ''c''
