--- a/wiki/sling.wikitext
+++ b/wiki/sling.wikitext
@@ -29,3 +29,4 @@
 *[[Dutch]]: [[slinger]], [[zwaai]], [[draagband]]
 *[[Indonesian]]: [[]]
 *[[Japanese]]: [[]]
+*[[Lithuanian]]: [[svaidyklė]] ''f''
