Fmt - Is this better now? <bedrock#63818>

--- a/wiki/bedrock.wikitext
+++ b/wiki/bedrock.wikitext
@@ -1,12 +1,11 @@
 ==English==
 ===Noun===
-'''bedrock''' (''[[uncountable]]''), ''geology, mining, engineering, construction''
+'''bedrock''' (''[[uncountable]]'', ''geology, mining, engineering, construction)''
 
-# ''Bedrock'' is the [[solid]] [[rock]] that exists at some depth below the [[ground]] [[surface]]. Bedrock is rock "in place", as opposed to material that has been [[transport]]ed from another location by [[weathering]] and [[erosion]].
-**In mountainous regions, bedrock can be seen at the surface. However, these occurences are more properly called [[outcrop]]s.
-**In [[construction]] and [[engineering]], it is often desired to place [[foundation]]s on bedrock in order to improve the stability of a [[structure]].
+# The [[solid]] [[rock]] that exists at some depth below the [[ground]] [[surface]]. Bedrock is rock "in place", as opposed to material that has been [[transport]]ed from another location by [[weathering]] and [[erosion]].
+::In mountainous regions, bedrock can be seen at the surface. However, these occurences are more properly called [[outcrop]]s. In [[construction]] and [[engineering]], it is often desired to place [[foundation]]s on bedrock in order to improve the stability of a [[structure]].
 
 ===Proper noun===
-# ''Bedrock'' is the name of the fictional town in <u>"The Flintstones"</u>
+# '''Bedrock''' is the name of the fictional town in <u>"The Flintstones"</u>
 
 [[Category:Geology]]
