--- a/wiki/hippopotomonstrosesquippedaliophobia.wikitext
+++ b/wiki/hippopotomonstrosesquippedaliophobia.wikitext
@@ -8,7 +8,7 @@ Combination of elements suggesting largeness or length, deliberately forming a w
 ===Noun===
 
 #The fear of long words.
-#Irony, to be afraid of long words having a long word desribe it.
+#Irony, to be afraid of long words having a long word describe it.
 
 ===Usage===
 
