--- a/wiki/spoon.wikitext
+++ b/wiki/spoon.wikitext
@@ -1,3 +1,7 @@
+
+== Headline text ==
+THERE IS NO SPOON!!!!
+
 ===Etymology=== 
 Middle English [[spone]], "spoon, chip of wood", from Old English [[spon|spón]] "sliver, chip of wood", from common Germanic ''*spē-nu-'', derived from Proto-Indo-European ''*spē-'' "length of wood".  Possible cognates include Greek [[σφήν]] (sphēn) "wedge".
 
