--- a/wiki/%E6%9F%84.wikitext
+++ b/wiki/%E6%9F%84.wikitext
@@ -11,13 +11,12 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#handle, lever, knob
-*# authority
-
+*#[[handle]], [[lever]], [[knob]]
+*# [[authority]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -33,7 +32,7 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[へい]] (hei), [[ひょう]] (hyō)
@@ -43,9 +42,9 @@
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
-* '''[[Hangeul]]''': 병
+* '''[[Hangeul]]''': [[병]]
 
 * '''[[Eumhun]] reading''': 
 
