--- a/wiki/Dubya.wikitext
+++ b/wiki/Dubya.wikitext
@@ -6,3 +6,5 @@ Term came into widespread usage to refer to then U.S. presidential candidate, [[
 ==Noun==
 Originally an affectionate name for George W. Bush in Texas during his term as govenor, it aquired a more negative conotation after he won the Presidency.
 Depending on the context, Dubya can be used mockingly, affectionately or dispassionately towards George W. Bush.
+
+Dubya is synonymous with dumbass.
