/* Translations */ <fruit tree#3726>

--- a/wiki/fruit_tree.wikitext
+++ b/wiki/fruit_tree.wikitext
@@ -7,3 +7,4 @@
 *[[Catalan]]: [[arbre fruiter]] ''m''
 *[[Dutch]]: [[fruitboom]] ''m''
 *[[German]]: [[Obstbaum]] ''m''
+*[[Lithuanian]]: [[vaismedis]] ''m''
