--- a/wiki/quiver.wikitext
+++ b/wiki/quiver.wikitext
@@ -12,6 +12,7 @@
 ====Translations====
 *[[Finnish]]: [[nuoliviini]]
 *{{Pl}}: [[kołczan]] ''m''
+*[[Lithuanian]]: [[strėlinė]] ''f''
 
 ===Intransitive Verb===
 '''to quiver''' (quivered, quivering)
