--- a/wiki/crossbow.wikitext
+++ b/wiki/crossbow.wikitext
@@ -12,5 +12,6 @@
 *Greek: [[βαλλίστρα]] ''f''
 *Japanese: [[石弓]]
 *Korean: [[석궁]]
+*Lithuanian: [[arbaletas]] ''m''
 *Polish: [[kusza]]
 *Swedish: [[armborst]] ''n''
