add sailing term <gaff#49705>

--- a/wiki/gaff.wikitext
+++ b/wiki/gaff.wikitext
@@ -5,3 +5,4 @@
 #A hooked implement for fishing.
 #(''British slang'') A place of residence.
 #:''We're going round to Mike's gaff later to watch the footie.''
+#The upper [[spar]] used to control a gaff-rigged [[sail]].
