--- a/wiki/sling.wikitext
+++ b/wiki/sling.wikitext
@@ -29,4 +29,4 @@
 *[[Dutch]]: [[slinger]], [[zwaai]], [[draagband]]
 *[[Indonesian]]: [[]]
 *[[Japanese]]: [[]]
-*[[Lithuanian]]: [[svaidyklė]] ''f''
+*[[Lithuanian]]: [[svaidyklė]] ''f'' (1)
