--- a/wiki/sn%C3%B6mos.wikitext
+++ b/wiki/sn%C3%B6mos.wikitext
@@ -3,7 +3,7 @@
 '''snömos''' (''n'')
 
 #(''uncountable'') A disgusting mix of [[snow]], [[sand]] and [[emissions]] from [[car]]s which is formed on the streets during the winter.
-#(''uncountable'') A text filled with [[buzzwords]] and completely meaningless statements which doesn't contain any real facts.
+#(''uncountable'') A text filled with [[buzzword]]s and completely meaningless statements which doesn't contain any real facts.
 
 ====Synonymes====
 *[[modd]] (1), [[snöslask]] (1) (''if halfway melted'')
