fmt; made non-POV <Dubya#54791>

--- a/wiki/Dubya.wikitext
+++ b/wiki/Dubya.wikitext
@@ -1,10 +1,8 @@
-==Pronounciation==
+==English==
+===Etymology===
+From a southern [[United States]] pronunciation of [[W]], the middle initial of [[w:George W. Bush|George W. Bush]].
 
-==Etymology==
-Term came into widespread usage to refer to then U.S. presidential candidate, [[George W. Bush]] in late 1999 during the run up to the national Republican primary season. Following the controversial outcome of the 2000 election and the wars following the events of Sept. 11 2001, term became used much more globally.
+===Proper noun===
+'''Dubya'''
 
-==Noun==
-Originally an affectionate name for George W. Bush in Texas during his term as govenor, it aquired a more negative conotation after he won the Presidency.
-Depending on the context, Dubya can be used mockingly, affectionately or dispassionately towards George W. Bush.
-
-Dubya is synonymous with dumbass.
+#A [[nickname]] for [[w:George W. Bush|George W. Bush]].
