fmt; made non-POV <Dubya#54791>

--- a/wiki/Dubya.wikitext
+++ b/wiki/Dubya.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Etymology===
-From a southern [[United States]] pronunciation of [[W]], the middle initial of [[w:George W. Bush|George W. Bush]].
+Representing a southern [[United States]] pronunciation of [[W]], the middle initial of [[w:George W. Bush|George W. Bush]].
 
 ===Proper noun===
 '''Dubya'''
