--- a/wiki/student.wikitext
+++ b/wiki/student.wikitext
@@ -18,17 +18,54 @@ From Latin ''[[studens]]'', present participle of ''[[studere]]'', '''study'''
 *Italian: [[studente]] ''m'' / [[studentessa]] ''f'', [[scolaro]] ''m'' / [[scolara]] ''f'', [[alunno]] ''m'' / [[alunna]] ''f''
 *Japanese: [[学生]], [[生徒]]
 *Spanish: [[estudiante]] ''m/f'', [[alumno]] ''m'', [[alumna]] ''f''
+*Swedish: [[student#swedish|student]] ''c'', [[studentska]] ''c'' (''to stress it is a female'')
 
 ====Synonyms====
 *[[pupil]]
 *[[devotee]] (2)
 
-
+-----
 == German ==
 === Noun ===
 '''Student''' ''m'', Gen. '''Studenten''', pl. '''Studenten'''
 
 # [[student]]
+
+-----
+==Swedish==
+===Noun===
+'''student'''
+
+#[[student#english|student]]
+
+{| border=1 cellspacing=0
+| bgcolor="#FFFFF0" colspan=5 align=center | '''Common'''
+|-
+|- bgcolor="#FFFFF0" align=center
+! rowspan=2 | 
+| colspan=2 width=105| Singular 
+| colspan=2 | Plural
+|- bgcolor="#FFFFF0" align=center
+| width=105 | ''Indefinite'' 
+| width=105 | ''Definite'' 
+| width=105 |  ''Indefinite'' 
+|  width=105 | ''Definite''
+|- align=center
+| width=105 bgcolor="#FFFFF0" | ''Nominative'' 
+| [[student]]
+| [[studenten]]
+| [[studenter]]
+| [[studenterna]]
+|- align=center
+| width=105 bgcolor="#FFFFF0" | ''Genitive'' 
+| [[students]]
+| [[studentens]]
+| [[studenters]]
+| [[studenternas]]
+|}
+
+
+
 
 [[pl:student]]
 [[fr:student]]
