--- a/wiki/student.wikitext
+++ b/wiki/student.wikitext
@@ -67,6 +67,7 @@ From Latin ''[[studens]]'', present participle of ''[[studere]]'', '''study'''
 
 
 
-[[pl:student]]
 [[fr:student]]
+[[sv:student]]
+[[pl:student]]
 [[category:english nouns]]
