--- a/wiki/elev.wikitext
+++ b/wiki/elev.wikitext
@@ -1,7 +1,34 @@
 ==Swedish==
 ===Noun===
-'''elev''' ''c'' (''pl'' [[elever]], ''def sing'' [[eleven]], ''def pl'' [[eleverna]])
+'''elev''' 
 
 #[[pupil]], [[student]]
+
+{| border=1 cellspacing=0
+| bgcolor="#FFFFF0" colspan=5 align=center | '''Common'''
+|-
+|- bgcolor="#FFFFF0" align=center
+! rowspan=2 | 
+| colspan=2 width=105| Singular 
+| colspan=2 | Plural
+|- bgcolor="#FFFFF0" align=center
+| width=105 | ''Indefinite'' 
+| width=105 | ''Definite'' 
+| width=105 |  ''Indefinite'' 
+|  width=105 | ''Definite''
+|- align=center
+| width=105 bgcolor="#FFFFF0" | ''Nominative'' 
+| [[elev]]
+| [[eleven#swedish|eleven]]
+| [[elever]]
+| [[eleverna]]
+|- align=center
+| width=105 bgcolor="#FFFFF0" | ''Genitive'' 
+| [[elevs]]
+| [[elevens]]
+| [[elevers]]
+| [[elevernas]]
+|}
+
 
 [[sv:elev]]
