interwiki [[la:𐌷𐌿𐌽𐌳𐍃]] <hunds#42324>

--- a/wiki/hunds.wikitext
+++ b/wiki/hunds.wikitext
@@ -5,3 +5,5 @@ From common Germanic ''*hundaz'', from Proto-Indo-European ''*ḱwn̥tós'', der
 ===Noun===
 '''𐌷𐌿𐌽𐌳𐍃''' ''[[Wiktionary Appendix:Gothic strong declension|strong]]'' ''m'' (hunds)
 # a [[dog]]
+
+[[la:𐌷𐌿𐌽𐌳𐍃]]
