--- a/wiki/study.wikitext
+++ b/wiki/study.wikitext
@@ -14,6 +14,7 @@
 *Portuguese: [[estudar]]
 *Russian: [[изучать]] (izučát')
 *Spanish: [[estudiar]]
+*Swedish: [[studera]]
 
 ===Noun===
 '''study''' (plural: [[studies]])
@@ -26,6 +27,7 @@
 ====Translations====
 *Finnish: [[tutkimus]] (1), [[opiskelu]] (1), [[työhuone]] (2), [[luonnos]] (3), [[pastissi]] (3), [[etydi]] (3, ''in music'')
 *French: [[étude]] ''f'' (1, 3)
+*Swedish: [[studie]] ''c''
 
 ===Related terms===
 *[[student]]
