--- a/wiki/study.wikitext
+++ b/wiki/study.wikitext
@@ -27,7 +27,7 @@
 ====Translations====
 *Finnish: [[tutkimus]] (1), [[opiskelu]] (1), [[työhuone]] (2), [[luonnos]] (3), [[pastissi]] (3), [[etydi]] (3, ''in music'')
 *French: [[étude]] ''f'' (1, 3)
-*Swedish: [[studie]] ''c''
+*Swedish: [[studie]] ''c'' (1,3), [[studierum]] ''n'' (2)
 
 ===Related terms===
 *[[student]]
