--- a/wiki/process.wikitext
+++ b/wiki/process.wikitext
@@ -1,7 +1,7 @@
 ===Translations===
 
 *Dutch: [[bewerken]], [[bewerking]], [[ontwikkelingsgang]], [[proces]], [[verloop]]
-*French: [[recette]]
+*French: [[recette]], [[processus]], [[procedé]], [[proceder]]
 *German: [[Prozess]]
 *Italian: [[azione]]
 *Portuguese: [[proceder]], [[procedimento]]
