def needed. <process#37462>

--- a/wiki/process.wikitext
+++ b/wiki/process.wikitext
@@ -1,8 +1,46 @@
-===Translations===
+==English==
+===Noun===
+'''process'''
 
+====Translations====
 *Dutch: [[bewerken]], [[bewerking]], [[ontwikkelingsgang]], [[proces]], [[verloop]]
 *French: [[recette]], [[processus]], [[procedé]], [[proceder]]
 *German: [[Prozess]]
 *Italian: [[azione]]
 *Portuguese: [[proceder]], [[procedimento]]
 *Greek: [[ διεργασία]]
+*Swedish: [[process#Swedish|process]]
+
+
+----
+==Swedish==
+===Noun===
+'''process'''
+
+# [[process#English|process]]
+
+{| border=1 cellspacing=0
+| bgcolor="#FFFFF0" colspan=5 align=center | '''gender'''
+|-
+|- bgcolor="#FFFFF0" align=center
+! rowspan=2 | 
+| colspan=2 width=105| Singular 
+| colspan=2 | Plural
+|- bgcolor="#FFFFF0" align=center
+| width=105 | ''Indefinite'' 
+| width=105 | ''Definite'' 
+| width=105 |  ''Indefinite'' 
+|  width=105 | ''Definite''
+|- align=center
+| width=105 bgcolor="#FFFFF0" | ''Nominative'' 
+| [[process]]
+| [[processen]]
+| [[processer]]
+| [[processerna]]
+|- align=center
+| width=105 bgcolor="#FFFFF0" | ''Genitive'' 
+| [[process]]
+| [[processens]]
+| [[processers]]
+| [[processernas]]
+|}
