/* Verb */  to cut out of something else <clip#63870>

--- a/wiki/clip.wikitext
+++ b/wiki/clip.wikitext
@@ -10,5 +10,7 @@
 
 ==Verb==
 '''clip'''
-# To shorten by cutting
+# To shorten by cutting.
 #: ''She clipped my hair with her scissors.''
+# To cut out of something else.
+#: ''Please clip that coupon out of the newspaper.''
