Yo, how hard was that? <rap music#63866>

--- a/wiki/rap_music.wikitext
+++ b/wiki/rap_music.wikitext
@@ -1,1 +1,18 @@
-a type of music, ho
+==English==
+
+===Noun Phrase===
+'''rap music''' (uncountable)
+
+# A form of [[popular music]] emphasizing spoken rhymes over heavily rhythmic [[backing tracks]].
+
+===Related Terms===
+*[[rap]]
+*[[rapper]]
+*[[gangsta rap]]
+
+===See Also===
+*[[beat]]
+*[[freestyle]]
+*[[hip-hop]]
+*[[MC]]
+*[[toasting]]
