attempt to restore lost info (you's could be either standard or not) <you's#63420>

--- a/wiki/you%27s.wikitext
+++ b/wiki/you%27s.wikitext
@@ -1,8 +1,8 @@
 ==English==
-===Etymology===
-*Contraction of the non-standard "you is" for "you are".
 
 ===Contraction===
 '''you's'''
 
-#(''especially [[AAVE]]'') You are.
+# Contraction of ''you is''.
+#: ''Talking to you's always an adventure.''
+#: ([[w:African American Vernacular English|AAVE]], also [[youse]]) ''You's a damn fool!''
