attempt to clarify AAVE spelling issue <youse#63393>

--- a/wiki/youse.wikitext
+++ b/wiki/youse.wikitext
@@ -11,8 +11,8 @@
 ===Usage notes===
 *The form ''youse'' is found mainly (but not exclusively) in various parts of the northern [[United States]], particularly [[Minnesota]], [[Wisconsin]], [[Chicago]], [[New York]] and [[Philadelphia]], while in the southern United states and AAVE, [[y'all]] is the more common form.
 *In New York ''youse'' may be grammatically singular (''I don't know what youse is talking about'').
-<!-- what does this mean?
-*The variant spelling ''you's'' may be used generally (''Talking to you's always fun.'') or in AAVE (''You's a damn fool.''), the spelling ''youse'' is only used for the second case (''Youse a damn fool'' but not ''Talking to youse always fun.'').
--->
+*The standard contraction for ''you is'' is ''you's'' (e.g., ''Talking to you's always fun.'').  In transcribing the AAVE usage of ''you is'' where standard English has ''you are'', either ''you's'' or ''youse'' is used.  E.g, either ''You's a damn fool'' or ''Youse a damn fool'' but never ''Talking to youse always fun''.
+
+
 ===See also===
 *[[y'all]]
