--- a/wiki/pilar.wikitext
+++ b/wiki/pilar.wikitext
@@ -3,3 +3,15 @@
 '''pilar'''
 
 # to [[pound]]
+
+----
+==Swedish==
+===Noun===
+'''pilar'''
+
+# Indefinite form of [[pil]]
+
+===Verb===
+'''pilar'''
+
+# Present tense of [[pila]]
