--- a/wiki/pilar.wikitext
+++ b/wiki/pilar.wikitext
@@ -9,9 +9,11 @@
 ===Noun===
 '''pilar'''
 
-# Indefinite form of [[pil]]
+# Indefinite form plural of [[pil]]
 
 ===Verb===
 '''pilar'''
 
 # Present tense of [[pila]]
+
+[[sv:pilar]]
