--- a/wiki/pila.wikitext
+++ b/wiki/pila.wikitext
@@ -33,3 +33,12 @@
 '''pila'''
 
 # 3rd person singular present indicative of ''[[pilar]]'', ''to [[pound]]''.
+
+----
+==Swedish==
+===Verb===
+'''pila'''
+
+<!---better def needed: it has to do with running quickly, energetically... mostly used about youngsters... A bit out of fashion, though.--->
+
+[[sv:pila]]
