--- a/wiki/Malagasy.wikitext
+++ b/wiki/Malagasy.wikitext
@@ -3,7 +3,9 @@
 #A person from [[Madagascar]] or of Malagasy descent.
 
 ====Translations====
+
 *Chinese: [[马尔加什人]] (mǎrjiāshí-rén)
+*French: [[Malgache]]
 *German: [[Madagasse]] ''m'', [[Madagassin]] ''f''
 
 ===Adjective===
@@ -11,7 +13,9 @@
 #Of, from, or pertaining to Madagascar, the Malagasy people or the Malagasy language.
 
 ====Translations====
+
 *Chinese: [[马尔加什的]] (mǎrjiāshí-de)
+*French: [[malgache]]
 *German: [[madagassisch]]
 
 === External links===
