fi expanded; dewikify fi <table#38559>

--- a/wiki/table.wikitext
+++ b/wiki/table.wikitext
@@ -28,7 +28,7 @@ From French ''table'', from Latin ''[[tabula]]'', '''[[tablet]]'''
 *[[Catalan]]: [[taula]] ''f''
 *Danish: [[bord#Danish|bord]]
 *Dutch: [[tafel]] ''f''
-*[[Finnish]]: [[pöytä]]
+*Finnish: [[pöytä]]
 *French: table ''f''
 *German: [[Tisch]] ''m''
 |}
@@ -63,7 +63,7 @@ From French ''table'', from Latin ''[[tabula]]'', '''[[tablet]]'''
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 *Dutch: [[tabel]] ''m''
-*[[Finnish]]: [[taulukko]]
+*Finnish: [[taulukko]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -77,7 +77,7 @@ From French ''table'', from Latin ''[[tabula]]'', '''[[tablet]]'''
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 *Dutch: [[tafel]] ''f'', [[vermenigvuldigingstafels]] ''f plural'', [[rekentafels]] ''f plural''
-*[[Finnish]]: [[taulukko]]
+*Finnish: [[taulu]], [[taulukko]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -117,7 +117,7 @@ From French ''table'', from Latin ''[[tabula]]'', '''[[tablet]]'''
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 *Dutch: [[op]] [[tafel]] [[zetten]], [[de]] [[tafel]] [[dekken]] ''(to prepare a table for a meal)''
-*[[Finnish]]: [[panna pöydälle]]
+*Finnish: [[panna]] [[pöytä|pöydälle]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -128,9 +128,10 @@ From French ''table'', from Latin ''[[tabula]]'', '''[[tablet]]'''
 '''obsolete: to propose for discussion'''
 {| border=0  width=100%
 |-
-*Dutch: ter [[tafel]] [[brengen]]
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
+*Dutch: ter [[tafel]] [[brengen]]
+*Finnish: [[tuoda]] [[keskusteluun]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -144,7 +145,7 @@ From French ''table'', from Latin ''[[tabula]]'', '''[[tablet]]'''
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*[[Finnish]]: jättää asia pöydälle
+*[[Finnish]]: [[jättää pöydälle]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
