add IPA prons <axes#37071>

--- a/wiki/axes.wikitext
+++ b/wiki/axes.wikitext
@@ -1,5 +1,6 @@
 ===Pronunciation===
 *[[w:AHD|AHD]]: ăk'sĭz
+*[[w:International Phonetic Alphabet|IPA]]: ˈæk.səz
 
 ===Noun===
 '''axes''' (plural)
@@ -8,6 +9,7 @@
 
 ===Pronunciation===
 *[[w:AHD|AHD]]: ăk'sēz"
+*[[w:International Phonetic Alphabet|IPA]]: ˈæk.siz
 
 ===Noun===
 '''axes''' (plural)
