--- a/wiki/venison.wikitext
+++ b/wiki/venison.wikitext
@@ -4,3 +4,7 @@
 '''venison'''
 
 * the meat of a deer.  Carnal term ([[sarconym]]) for deer.
+
+
+====Translations====
+*Lithuanian: [[elniena]] ''f''
