--- a/wiki/potato.wikitext
+++ b/wiki/potato.wikitext
@@ -13,6 +13,7 @@
 *Italian: [[patata]]
 *Japanese: [[じゃがいも]] (jagaimo), [[馬鈴薯]] (ばれいしょ, barēsho)
 *[[Limburgish]]: [[irpel]]
+*Lithuanian: [[bulvė]] ''f''
 *[[Polish]]: [[ziemniak]] ''m'', [[kartofel]] ''m'', [[pyra]] ''f''
 *Portuguese: [[batata]], [[batatinha]]
 *Russian: [[картофель]], ''m''
