--- a/wiki/genus.wikitext
+++ b/wiki/genus.wikitext
@@ -8,4 +8,5 @@
 *Dutch: genus ''n'' (1), [[soort]] ''f'' (2)
 *German: [[Gattung]] ''f'' (1)
 *[[Interlingua]]: [[genere]]
+*Lithuanian: [[gentis]] ''f''
 *Portuguese: [[gênero]] ''m''
