--- a/wiki/milk.wikitext
+++ b/wiki/milk.wikitext
@@ -34,6 +34,7 @@
 *Korean: [[우유]] (uyu)
 *Latin: [[lac]] ''n''
 *Latvian: [[piens]] ''m''
+*Lithuanian: [[pienas]] ''m''
 *Mongolian: [[сүү]] (s&uuml;&uuml;)
 *Norwegian: [[melk]] ''c''
 *Persian: [[شير]] (šir)
