--- a/wiki/pork.wikitext
+++ b/wiki/pork.wikitext
@@ -17,6 +17,7 @@
 *Italian: [[porco]] ''m''
 *Japanese: [[豚肉]] (ぶたにく, butaniku), [[ポーク]] (pōku)
 *Korean: [[돼지]]
+*Lithuanian: [[kiauliena]] ''f''
 *Portuguese: carne de porco ''f''
 *Russian: [[свинина]] ''m'' (svinina)
 *Spanish: [[cerdo]] ''m''
