--- a/wiki/ice_cream.wikitext
+++ b/wiki/ice_cream.wikitext
@@ -29,6 +29,7 @@ Originally ''iced cream''.
 *German: [[Eis]] ''n''
 *Greek: [[παγωτό]] ([[pagotó]]) ''n''
 *Italian: [[gelato]] ''m''
+*Lithuanian: [[ledai]] ''m, pl''
 *Persian: [[بستنی]] (bastani)
 *Polish: [[lody]] ''pl m''
 *Slovak: [[zmrzlina#Slovak|zmrzlina]] ''f''
