--- a/wiki/spoon.wikitext
+++ b/wiki/spoon.wikitext
@@ -28,6 +28,7 @@ Middle English [[spone]], "spoon, chip of wood", from Old English [[spon|spón]]
 *Italian: [[cucchiaio]] ''m''
 *Japanese: [[スプーン]] (supūn)
 *Korean: [[숟가락]]
+*Lithuanian: [[šaukštas]] ''m''
 *Portuguese: [[colher]] ''f''
 *Russian: [[ложка]] ''f'' (lozhka)
 *Slovak: [[lyžica]] ''f (tablespoon)'', [[lyžička]] ''f (teaspoon)'' (1); [[varecha]] ''f'', [[vareška]] ''f'' (2)
