--- a/wiki/tablespoon.wikitext
+++ b/wiki/tablespoon.wikitext
@@ -23,6 +23,7 @@
 *Greek: [[κουτάλι σούπας]] ''n''
 *Italian: [[cucchiaio da tavola]] ''m''
 *Japanese: [[テーブルスプーン]]
+*Lithuanian: [[valgomasis šaukštas]] ''m''
 *Korean: [[큰스푼]]
 *Portuguese: [[colher]] ''f''
 *Slovak: [[lyžica]] ''f''
