--- a/wiki/teaspoon.wikitext
+++ b/wiki/teaspoon.wikitext
@@ -17,6 +17,7 @@
 *Italian: [[cucchiaino da tè]] ''m''
 *Japanese: [[ティースプーン]]
 *Korean: [[찻숱가락]]
+*Lithuanian: [[šaukštelis]] ''m''; [[arbatinis šaukštelis]] ''m''
 *Slovak: [[lyžička]]
 *Spanish: [[cucharilla]] ''f'', [[cucharada de t&eacute;]] ''f''
 
