--- a/wiki/technician.wikitext
+++ b/wiki/technician.wikitext
@@ -20,4 +20,5 @@ tek-NI-shuhn
 *Dutch: [[technicus]] ''m'', [[technieker]] ''m''
 *French: [[technicien]] ''m''
 *Greek: [[technologos]]
+*Lithuanian: [[technikas]] ''m'', [[technikė]] ''f''
 *Swedish: [[tekniker]]
