--- a/wiki/head.wikitext
+++ b/wiki/head.wikitext
@@ -28,6 +28,7 @@ Related Germanic words are old German ''houbit'' (Haupt), middle Dutch ''h&ocirc
 #:*[[Irish]]: [[ceann]] ''m''
 #:*[[Japanese]]: [[頭]] ([[あたま]], atama)
 #:*[[Korean]]: [[머리]] (meori)
+#:*[[Lithuanian]]: [[galva]] ''f''
 #:*[[Low Saxon]]: [[kopp]]
 #:*[[Persian]]: [[سَر]] (sær)
 #:*[[Pitjantjatjara]]: [[kata]]
@@ -52,6 +53,7 @@ Related Germanic words are old German ''houbit'' (Haupt), middle Dutch ''h&ocirc
 #:*[[Indonesian]]: [[kepala]], [[pimpin|pemimpin]]
 #:*[[Interlingua]]: ''[[chef]]'', ''[[leader]]''
 #:*[[Japanese]]: [[指導者]] (しどうしゃ, shidōsha), [[頭]] ([[かしら]], kashira)
+#:*[[Lithuanian]]: [[galva]] ''f''; [[vadovas]] ''m'', [[vadovė]] ''f''
 #:*[[Low Saxon]]: [[baas]], ''m'',''f''
 #:*[[Polish]]: [[kierownik]] ''m'', [[kierowniczka]] ''f''
 #:*[[Portuguese]]: [[chefe]] ''m'' & ''f'', [[cabeça]] ''m'', [[líder]] ''m'' & ''f''
@@ -67,8 +69,11 @@ Related Germanic words are old German ''houbit'' (Haupt), middle Dutch ''h&ocirc
 # The foam that forms on top of [[beer]] or other carbonated [[beverage]]s.
 # (''Vulgar'') [[Fellatio]], [[Oral sex]].  (Usually used in the phrase ''give head.'')
 # The end of a [[hammer]], [[axe]], or similar [[implement]] used for striking other objects.
+#:'''Translations'''
+#:*Lithuanian: [[galva]] ''f''
 # The blunt end of a [[nail]], [[screw]], [[tack]], [[pin]] or similar [[fastener]].
 #:'''Translations'''
+#:*Lithuanian: [[galvutė]] ''f''
 #:*Swedish: [[huvud]]
 
 ===Verb===
