--- a/wiki/reptile.wikitext
+++ b/wiki/reptile.wikitext
@@ -12,6 +12,7 @@
 *Dutch: [[reptiel]] ''n''
 *French: reptile ''m''
 *German: [[Kriechtier]] ''n'', [[Reptil]] ''n''
+*Lithuanian: [[roplys]] ''m''
 *{{pl}}: [[gad]] ''m''
 *Portuguese: [[réptil]] ''m''
 *Russian: [[прeсмыкaющeeся]] ''n''
