--- a/wiki/animal.wikitext
+++ b/wiki/animal.wikitext
@@ -47,6 +47,7 @@
 *[[Kannada]]: [[prani]]
 *Korean: [[동물]] [動物] (dongmul)
 *Latin: animal ''n'', [[bestia]] ''f''
+*Lithuanian: [[gyvūnas]] ''m''
 *Norwegian: [[dyr]]
 *Persian: [[جانور]]  (janevar), [[حیوان]] (heyvan)
 *Polish: [[zwierzę]] ''n''
@@ -90,6 +91,7 @@
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
+*Lithuanian: [[žvėris]] ''m'', [[gyvulys]] ''m''
 *Persian: [[حیوان]]  (heyvan) 
 *Russian: [[зверь]] ''m''
 *Slovak: [[zviera]] ''n''
