--- a/wiki/anticipation.wikitext
+++ b/wiki/anticipation.wikitext
@@ -1,10 +1,3 @@
-==English==
-===Etymology===
-Latin [[anticipatio]]: compare with French [[anticipation]].
-
-===Pronunciation===
-IPA: [[WEAE]] /æn.tɪs.əˈpe.ʃən/
-
-===Noun===
-# The act of [[anticipating]], taking up, placing, or considering something beforehand, or before the proper time in natural order.
-<!-- material copied from Webster's Revised Unabridged Dictionary (1913) -->
+In [[finance]], '''anticipation''' is where [[debt]]s are paid off early, generally in order to pay less [[interest]].
+{{stub}}
+[[Category:Finance]]
