--- a/wiki/MILF.wikitext
+++ b/wiki/MILF.wikitext
@@ -1,1 +1,5 @@
-#REDIRECT [[Transwiki:Mother I'd Like To Fuck]]
+Milf stands for 'Moms I'd like to Fuck'.
+
+The word MILF was made popular by the movie American Pie'.
+
+It is now one of the top adult searches on the entire internet.
