--- a/wiki/cult.wikitext
+++ b/wiki/cult.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Noun===
-#Religious group or doctrine
+#A group or doctrine with religious or philosophical identity
 
 ====Translations====
 *Finnish: [[kultti]], [[lahko]]
