--- a/wiki/cult.wikitext
+++ b/wiki/cult.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Noun===
-#A group or doctrine with religious or philosophical identity
+#A group or doctrine with religious or philosophical identity, often existent on the margins of society.  
 
 ====Translations====
 *Finnish: [[kultti]], [[lahko]]
