/* Translations */ <Star Wars#63890>

--- a/wiki/Star_Wars.wikitext
+++ b/wiki/Star_Wars.wikitext
@@ -9,3 +9,6 @@
 
 ===Translations===
 *[[Japanese]]: [[スター・ウォーズ]] (Sutaa Wouzu)
+
+===Further Reading===
+*[http://en.wikipedia.org/wiki/Star_Wars Wikipedia article on 'Star Wars']
