--- a/wiki/reptile.wikitext
+++ b/wiki/reptile.wikitext
@@ -1,3 +1,4 @@
+==English==
 ===Noun===
 '''reptile''' (plural: [[reptiles]])
 
@@ -8,10 +9,21 @@
 *[[reptillian]]
 
 ====Translations====
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
 *Czech: [[plaz]] ''m''
 *Dutch: [[reptiel]] ''n''
+*Finnish: [[matelija]]
 *French: reptile ''m''
 *German: [[Kriechtier]] ''n'', [[Reptil]] ''n''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
 *Lithuanian: [[roplys]] ''m''
 *{{pl}}: [[gad]] ''m''
 *Portuguese: [[réptil]] ''m''
@@ -19,6 +31,8 @@
 *Slovak: [[plaz]] ''m''
 *Spanish: [[reptil]] ''m''
 *Swedish: [[reptil#Swedish|reptil]] ''c''
+|}
+|}
 
 ===See also===
 *[[alligator]], [[gator]]
