--- a/wiki/MILF.wikitext
+++ b/wiki/MILF.wikitext
@@ -1,8 +1,5 @@
-Milf stands for 'Moms I'd like to Fuck'.
-
-The word MILF was made popular by the movie American Pie'.
-
-It is now one of the top adult searches on the entire internet.
-
-===See also===
-*[http://www.free-milf.com Free Milfs]
+==English==
+===Noun===
+#Milf stands for 'Moms I'd like to Fuck'.
+===Etymology===
+The word MILF was made popular by the movie American Pie'. It is now one of the top adult searches on the entire internet.
