/* Intransitive verb */ fmtting + fi <snake#4440>

--- a/wiki/snake.wikitext
+++ b/wiki/snake.wikitext
@@ -80,7 +80,20 @@
 #to [[move]] in a [[wind]]ing path.  (''The river snakes through the valley.'')
 
 ====Translations====
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
 *[[Bosnian]]: [[vijugati se]], [[izvijati se]]
+*Finnish: [[kiemurrella]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
 *Swedish: [[slingra]], [[slingra sig]], [[vindla]]
+|}
+|}
 
 [[Category:English reptiles]]
