--- a/wiki/SFAIAA.wikitext
+++ b/wiki/SFAIAA.wikitext
@@ -1,7 +1,6 @@
-===[[Wiktionary:List of acronyms and abbreviations|Acronym]]===
-
-
-
-# SFAIAA is an [[acronym]] for the statement "'''''S'''o '''F'''ar '''A'''s '''I''' '''A'''m '''A'''ware''".  
-# It is used frequently in [[email]] and [[usenet]] in order to speed up message construction time and to reduce the amount of space needed.
-# Also see [[AFAIK]] and [[SFAIK]].
+==English==
+===[[Acronym]]===
+# SFAIAA is an [[acronym]] for the statement "'''''S'''o '''F'''ar '''A'''s '''I''' '''A'''m '''A'''ware''".  It is used frequently in [[email]] and [[usenet]] in order to speed up message construction time and to reduce the amount of space needed.
+===See Also===
+#[[AFAIK]]
+#[[SFAIK]]
