formatting of translations <milk#28717>

--- a/wiki/milk.wikitext
+++ b/wiki/milk.wikitext
@@ -11,6 +11,11 @@
 #:''I'll have a milk &mdash; in a dirty glass!''
 
 ====Translations====
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
 *Arabic: [[لبن]] (laban)
 *Basque: [[esne]]
 *Breton: [[laezh]] ''m''
@@ -30,6 +35,11 @@
 *[[Interlingua]]: [[lacte]]
 *Irish: [[bainne]] ''m''
 *Italian: [[latte]] ''m''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
 *Japanese: [[牛乳]] (ぎゅうにゅう, gyūnyū), [[ミルク]] (miruku)
 *Korean: [[우유]] (uyu)
 *Latin: [[lac]] ''n''
@@ -50,6 +60,8 @@
 *Spanish: [[leche]] ''f''
 *Swedish: [[mjölk]] ''c''
 *Turkish: [[süt]]
+|}
+|}
 
 ====Related terms====
 *[[milkmaid]]
@@ -76,18 +88,80 @@
 #To take advantage of (a situation).
 
 ====Translations====
-*[[Basque]]: (1): [[jetzi]]
-*Bulgarian: (1): [[доя]] (1)
-*[[Czech]]: (1): [[dojit]]
-*[[Finnish]]: (1, 2): [[lypsää]], (3): [[jaaritella]], [[jankata]]
-*French: (1): [[traire]]
-*German: (1, 2): [[melken]]
-*Irish: (1): [[cr&uacute;igh]]
-*Latvian: (1,2,4): [[slaukt]], (2): [[izspiest|izspiest (sulu)]], (3): [[liet]]
-*[[Polish]]: (1): [[doić]]
-*[[Slovak]]: (1): [[dojiť]]
-*Slovene: (1): [[molsti]]
-*Swedish: (1, 2): [[mjölka]]
+'''to express milk from mammal'''
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*[[Basque]]: [[jetzi]]
+*Bulgarian: [[доя]]
+*[[Czech]]: [[dojit]]
+*Finnish: [[lypsää]]
+*French: [[traire]]
+*German: [[melken]]
+*Irish: [[cr&uacute;igh]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+*Latvian: [[slaukt]]
+*[[Polish]]: [[doić]]
+*[[Slovak]]: [[dojiť]]
+*Slovene: [[molsti]]
+*Swedish: [[mjölka]]
+|}
+|}
+
+'''to express any liquid'''
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*Finnish: [[lypsää]]
+*German: [[melken]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+*Latvian: [[slaukt]], [[izspiest|izspiest (sulu)]]
+*Swedish: [[mjölka]]
+|}
+|}
+
+'''to talk or write at length'''
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*Finnish: [[jaaritella]], [[jankata]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+*Latvian: [[liet]]
+|}
+|}
+
+'''to take advantage of situation'''
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+*Latvian: [[slaukt]]
+|}
+|}
 
 ===See also===
 *[[dairy]]
