--- a/wiki/potato.wikitext
+++ b/wiki/potato.wikitext
@@ -1,7 +1,15 @@
+==English==
 ===Noun===
 '''potato''' (plural: [[potatoes]])
 
+#{{stub}}
+
 ====Translations====
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
 *[[Chinese]]: [[土豆]], [[马铃薯]]
 *Czech: [[brambor]]
 *Danish: [[kartoffel]]
@@ -11,6 +19,11 @@
 *French: [[pomme de terre]] ''f''
 *German: [[Kartoffel]] ''f''
 *Italian: [[patata]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
 *Japanese: [[じゃがいも]] (jagaimo), [[馬鈴薯]] (ばれいしょ, barēsho)
 *[[Limburgish]]: [[irpel]]
 *Lithuanian: [[bulvė]] ''f''
@@ -20,3 +33,5 @@
 *Spanish: [[patata]] ''f'', [[papa]] ''f'' (Mexico)
 *Swedish: [[potatis]]
 *[[Tibetan]]: [[ཞོ་ཁོག་]] (zho khog)
+|}
+|}
