reverting + formatting <spoon#43911>

--- a/wiki/spoon.wikitext
+++ b/wiki/spoon.wikitext
@@ -1,5 +1,4 @@
-== Headline text ==
-THERE IS NO SPOON!!!!
+==English==
 
 ===Etymology=== 
 Middle English [[spone]], "spoon, chip of wood", from Old English [[spon|spón]] "sliver, chip of wood", from common Germanic ''*spē-nu-'', derived from Proto-Indo-European ''*spē-'' "length of wood".  Possible cognates include Greek [[σφήν]] (sphēn) "wedge".
