/* Translations */ Korean Word Added <goat#8122>

--- a/wiki/goat.wikitext
+++ b/wiki/goat.wikitext
@@ -45,6 +45,7 @@
 *Irish: [[gabhar]]
 *Italian: [[capra]] ''f''
 *Japanese: [[やぎ]] (yagi)
+*Korean: [[염소]] (yeomso)
 *[[Javanese]]: [[wedus]]
 *[[Ladin]]: [[cioura]]
 *Latin: [[caper]] ''m'', [[capra]] ''f'', [[hircus]] ''m''
