/* Meaning */ <half-uncle#63893>

--- a/wiki/half-uncle.wikitext
+++ b/wiki/half-uncle.wikitext
@@ -10,6 +10,8 @@
 ===Meaning===
 #Halfbrother of someone's father. (''paternal halfuncle'')
 #Halfbrother of someone's mother. (''maternal halfuncle'')
+#Halfbrother-in-law of someone's father.
+#Halfbrother-in-law of someone's mother.
 
 ===Translations===
 *[[French]]: [[démi-oncle]]
