--- a/wiki/agglutination.wikitext
+++ b/wiki/agglutination.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 #The act of uniting by glue or other tenacious substance; the state of being thus united; adhesion of parts.
 #Combination in which root words are united with little or no change of form or loss of meaning. See [[agglutinative]], 2.
-
+#The clumping together of red blood cells or bacteria, usually in response to a particular antibody.
 ==[[Romanica]]==
 ===Noun===
 <b>agglutination</b> ''f''
