--- a/wiki/beyond.wikitext
+++ b/wiki/beyond.wikitext
@@ -2,3 +2,4 @@
 ===Preposition===
 # further away than {{stub}}
 # one the far side of
+# often implies movement past a known location that is not defined as within here
