--- a/wiki/Aaron.wikitext
+++ b/wiki/Aaron.wikitext
@@ -7,7 +7,7 @@
 ====Translations====
 *Hebrew: [[אהרן]] (’Ahărōn) (2)
 *Estonian: Aaron
-*Arabic: [[ﻫﺎﺭﻭﻥ]] (hărūn)
+*Arabic: [[هارون]] (hărūn)
 
 ====Related terms====
 *[[Aaron's rod]]
