Added Finnish, German and Swedish translation <philosophy#61280>

--- a/wiki/philosophy.wikitext
+++ b/wiki/philosophy.wikitext
@@ -11,3 +11,9 @@ from Greek (philosophia): philos = love
 1.  A comprehesive system of belief that are, genrally, divided into five major subtopics:  [[Logic]]; [[Metaphysics]]; [[Epistemology]]; [[Ethics]] and [[Esthetics]]
 
 2. A general principle (usually moral)
+
+=== [[Translations]] ===
+
+*[[Finnish]]: [[filosofia]]
+*[[German]]: [[Philosophie]]
+*[[Swedish]]: [[filosofi]]
