--- a/wiki/fran%C3%A7aise.wikitext
+++ b/wiki/fran%C3%A7aise.wikitext
@@ -1,1 +1,9 @@
-ideal
+==French==
+===Noun===
+'''Française''' ''f''
+# [[Frenchwoman]]
+
+===Adjective===
+'''française''' ''f''
+
+# Feminine of [[français]]
