--- a/wiki/philosophy.wikitext
+++ b/wiki/philosophy.wikitext
@@ -12,7 +12,7 @@ from Greek (philosophia): philos = love
 
 2. A general principle (usually moral)
 
-=== [[Translations]] ===
+=== Translations ===
 
 *[[Finnish]]: [[filosofia]]
 *[[German]]: [[Philosophie]]
