--- a/wiki/genus.wikitext
+++ b/wiki/genus.wikitext
@@ -6,7 +6,9 @@
 
 ==== Translations ====
 *Dutch: genus ''n'' (1), [[soort]] ''f'' (2)
+*French: [[genre]] ''m''
 *German: [[Gattung]] ''f'' (1)
 *[[Interlingua]]: [[genere]]
+*Italian: [[genere]] ''m''
 *Lithuanian: [[gentis]] ''f''
 *Portuguese: [[gênero]] ''m''
