--- a/wiki/translation.wikitext
+++ b/wiki/translation.wikitext
@@ -28,6 +28,7 @@ From Lation '''[[translatio]]''', ''transfer'', from prefix '''[[trans-]]''', ''
 {|
 <!--Put translations for languages from J to Z here-->
 *Spanish: [[traducción]] ''f''
+*Swedish: [[översättning]]
 |}
 |}
 
@@ -46,6 +47,7 @@ From Lation '''[[translatio]]''', ''transfer'', from prefix '''[[trans-]]''', ''
 {|
 <!--Put translations for languages from J to Z here-->
 *Spanish: [[traducción]] ''f''
+*Swedish: [[översättning]]
 |}
 |}
 
@@ -78,6 +80,7 @@ From Lation '''[[translatio]]''', ''transfer'', from prefix '''[[trans-]]''', ''
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from J to Z here-->
+*Swedish: [[förflyttning]]
 |}
 |}
 
@@ -108,7 +111,6 @@ The translations below need to be checked by native speakers and inserted into t
 *Portuguese: [[tradução]] ''f''
 *Romanian: [[traducere]] ''f'', [[translatare]] ''f''
 *Russian: [[перевод]] ''m'' (perevod)
-*Swedish: [[översättning]] (1,2), [[förflyttning]] (4)
 *Vietnamese: [[dịch|(sự) dịch]] (1); [[dịch|(bản, bài) dịch]] (2)
 *Welsh: [[cyfieithiad]] ''m''
 
