--- a/wiki/genre.wikitext
+++ b/wiki/genre.wikitext
@@ -17,12 +17,14 @@ From French, meaning [[kind]]
 *[[genre fiction]]
 *[[gender]]
 <!-- [[generic]]? -->
+*[[generate]]
+*[[genus]]
 
 ====Translations====
 *Chinese: [[風格]], [[风格]]
 *German: Genre ''n''
 *Greek: [[ύφος]] ''n''
-*Japanese: [[ジャンル]] (jan'ru)
+*Japanese: [[ジャンル]] (janru)
 *Korean: [[장르]]
 
 ----
@@ -32,3 +34,18 @@ From French, meaning [[kind]]
 '''Genre''' ''n'' (plural: [[Genren]])
 
 # genre
+----
+==French==
+===Noun===
+'''genre''' ''m''
+
+# [[kind]]
+# [[style]]
+#(''grammar'') [[gender]]
+#(''biology'') [[genus]]
+
+===Related terms===
+*[[génome]]
+*[[gens]]
+*[[gent]]
+*[[gentil]]
