--- a/wiki/50-%C3%B6ring.wikitext
+++ b/wiki/50-%C3%B6ring.wikitext
@@ -7,8 +7,8 @@
 # A swedish coin with nominal value 50 [[öre]], and the smallest coin in use in Sweden. Presently (June 2004) worth approximately 6 US-cent.
 
 ===Synonyms===
-:Femtiöring
-:Femtioöring
+*[[Femtiöring]]
+*[[Femtioöring]]
 
 ===See also===
 :[[öring]]
