--- a/wiki/uni%C3%A8me.wikitext
+++ b/wiki/uni%C3%A8me.wikitext
@@ -1,6 +1,6 @@
 ==French==
 
-#ordinal form of [[un#French|]] (''one'') used in compounds
+#ordinal form of [[un#French|un]] (''one'') used in compounds
 
 ===Synonyms===
 *[[premier]], [[première]]
