/* [[multilingual associations]] */ <seagull#63830>

--- a/wiki/seagull.wikitext
+++ b/wiki/seagull.wikitext
@@ -7,4 +7,4 @@ Seagull - bird
 *[[Russian]]: [[:ru:чайка|чайка]] /chaika/
 
 ==[[multilingual associations]]==
-*[[Hebrew]]: - '''seagull''' [[:he:על|על]] ה[[:he:גל|גל]] /al a' gal/
+*[[Hebrew]]: - '''seagull''' [[:he:על|על]] ה[[:he:גל|גל]] /al a' gal/ (on [[wave]])
