--- a/wiki/uni%C3%A8me.wikitext
+++ b/wiki/uni%C3%A8me.wikitext
@@ -1,6 +1,6 @@
 ==French==
+#-[[first]] (''ordinal form of [[un#French|un]] used in compounds'')
+#:''vingt-et-unième'' - twenty-first
 
-#ordinal form of [[un#French|un]] (''one'') used in compounds
-
-===Synonyms===
+===See also===
 *[[premier]], [[première]]
