"premier" is not quite a synonym <unième#63896>

--- a/wiki/uni%C3%A8me.wikitext
+++ b/wiki/uni%C3%A8me.wikitext
@@ -1,4 +1,7 @@
 ==French==
+===Combining form===
+'''unième'''
+
 #-[[first]] (''ordinal form of [[un#French|un]] used in compounds'')
 #:''vingt-et-unième'' - twenty-first
 
