fmt; dewikified; I suspect some of the translations might be literal ones rather than correct - would native speakers please check them (fr:, de:, gr:, it:, ja:, es:) <half-uncle#63893>

--- a/wiki/half-uncle.wikitext
+++ b/wiki/half-uncle.wikitext
@@ -1,22 +1,16 @@
 ==English==
-
 ===Noun===
-'''half uncle'''
+'''half-uncle''' (''plural'' '''half-uncles''')
 
-===Variant Spellings===
-'''halfuncle'''<br>
-'''half-uncle'''
-
-===Meaning===
-#Halfbrother of someone's father. (''paternal halfuncle'')
-#Halfbrother of someone's mother. (''maternal halfuncle'')
-#Halfbrother-in-law of someone's father.
-#Halfbrother-in-law of someone's mother.
+#(''also paternal halfuncle'') The half-brother of one's father.
+#(''also maternal halfuncle'') Half-brother of one's mother.
+#Halfbrother-in-law of one's parent.
+#Halfbrother-in-law of one's mother.
 
 ===Translations===
-*[[French]]: [[démi-oncle]]
-*[[German]]: [[Halbonkel]]
-*[[Greek]]: [[ετεροθαλής θείος]]
-*[[Italian]]: [[zio mezzo]]
-*[[Japanese]]: [[異父母叔父さん]]
-*[[Spanish]]: [[tiastro]]
+*French: [[démi-oncle]]<!--is this correct or a literal translation?-->
+*German: [[Halbonkel]]<!--is this correct or a literal translation?-->
+*Greek: [[ετεροθαλής θείος]]<!--is this correct or a literal translation?-->
+*Italian: [[zio mezzo]]<!--is this correct or a literal translation?-->
+*Japanese: [[異父母叔父さん]]<!--is this correct or a literal translation?-->
+*Spanish: [[tiastro]]
