--- a/wiki/half-uncle.wikitext
+++ b/wiki/half-uncle.wikitext
@@ -2,8 +2,8 @@
 ===Noun===
 '''half-uncle''' (''plural'' '''half-uncles''')
 
-#(''also paternal halfuncle'') The half-brother of one's father.
-#(''also maternal halfuncle'') Half-brother of one's mother.
+#(''also'' '''paternal halfuncle''') The half-brother of one's father.
+#(''also'' '''maternal halfuncle''') Half-brother of one's mother.
 #Halfbrother-in-law of one's parent.
 #Halfbrother-in-law of one's mother.
 
