fmt; marked as rare and unofficial <myria-#63887>

--- a/wiki/myria-.wikitext
+++ b/wiki/myria-.wikitext
@@ -1,10 +1,14 @@
 ==English==
-
 ===Prefix===
-'''myria'''-
+'''myria-'''
 
-#In the [[International System of Units]] and other [[metric]] systems of units, multiplying the [[unit]] to which it is attached by 10,000. Symbol: my
+#(''rare'') In the [[metric]] systems of units, multiplying the [[unit]] to which it is attached by 10,000. Symbol: my
+
+====Usage note====
+*Not in official use in the [[International System of Units]].
+
+====Derived terms====
+*[[myriameter]], [[myriametre]]
 
 ====Related terms====
 *[[myriad]]
-*[[myriameter]], [[myriametre]]
