fmt; made concise <SFAIAA#63881>

--- a/wiki/SFAIAA.wikitext
+++ b/wiki/SFAIAA.wikitext
@@ -1,6 +1,8 @@
 ==English==
-===[[Acronym]]===
-# SFAIAA is an [[acronym]] for the statement "'''''S'''o '''F'''ar '''A'''s '''I''' '''A'''m '''A'''ware''".  It is used frequently in [[email]] and [[usenet]] in order to speed up message construction time and to reduce the amount of space needed.
-===See Also===
-#[[AFAIK]]
-#[[SFAIK]]
+===Abbreviation===
+'''SFAIAA''
+
+#(''Internet'') So far as I am aware.
+
+===Synonyms===
+*[[AFAIK]], [[SFAIK]]
