fmt; made concise <SFAIK#63880>

--- a/wiki/SFAIK.wikitext
+++ b/wiki/SFAIK.wikitext
@@ -1,6 +1,8 @@
-===[[Wiktionary:List of acronyms and abbreviations|Acronym]]===
+==English==
+===Abbreviation===
+'''SFAIK'''
 
+#(''Internet'') So far as I know.
 
-
-# SFAIK is an [[acronym]] for the statement "'''''S'''o '''F'''ar '''A'''s '''I''' '''K'''now''".  A few variants are as follows, [[SFAIAA]] ('''''S'''o '''F'''ar '''A'''s '''I''' '''A'''m '''A'''ware'') and [[AFAIK]] ('''''A'''s '''F'''ar '''A'''s '''I''' '''K'''now'').
-# It is used frequently in [[email]] and [[usenet]] in order to speed up message construction time and to reduce the amount of space needed.
+====Synonyms====
+*[[AFAIK]], [[SFAIAA]]
